--- a/YAPOJO/11AUG2017/NONJAVA/Exercise8.html
+++ b/YAPOJO/11AUG2017/NONJAVA/Exercise8.html
@@ -14,7 +14,7 @@ function Camel() {
 		strresult += stroutput[x].substring(0,1).toUpperCase() + stroutput[x].substring(1,a.length);
 	}
 
-	return strresult 
+	return strresult; 
 	
 }
     
