--- a/BITUIGA/18AUG2017/NONJAVA/HW_BITUIGA_2.html
+++ b/BITUIGA/18AUG2017/NONJAVA/HW_BITUIGA_2.html
@@ -7,7 +7,7 @@
 
       <form>
       	
-         <img id="myImage" src="C:\Users\User\Downloads\tenor.gif" />
+         <img id="myImage" src="D:\gitvob\ITA_G2\ITA-MNL_GROUP2\BITUIGA\18AUG2017\NONJAVA\tenor.gif" />
 
          <br><br>
         <input type="button" value="Move Left" onclick="moveLeft();" />
