--- a/LICUPCA/extensible-1.6.1/examples/calendar/TestApp/test-app.html
+++ b/LICUPCA/extensible-1.6.1/examples/calendar/TestApp/test-app.html
@@ -4,7 +4,7 @@
     <!-- This is required for most non-English locales! -->
     <meta http-equiv="Content-Type" content="text/html; charset=utf8">
 
-    <title>Extensible Calendar App</title>
+    <title>Tennis Reservation System</title>
     <!-- Sets up all Ext and Extensible includes: -->
     <script type="text/javascript" src="../../../Extensible-config.js"></script>
  
@@ -15,21 +15,9 @@
 <body>
     <div style="display:none;">
     <div id="app-header-content">
-        <div id="app-logo">
-            <div class="logo-top">&#160;</div>
-            <div id="logo-body">&#160;</div>
-            <div class="logo-bottom">&#160;</div>
-        </div>
-        <h1>Ext Calendar Pro</h1>
+        <h1>Tennis Reservation System</h1>
         <span id="app-msg" class="x-hidden"></span>
     </div>
     </div>
 </body>
-<script>
-    var updateLogoDt = function(){
-        document.getElementById('logo-body').innerHTML = new Date().getDate();
-    }
-    updateLogoDt();
-    //setInterval(updateLogoDt, 1000);
-</script>
 </html>
